Bug 96251 - LO crashes with Address data source wizard
Summary: LO crashes with Address data source wizard
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
5.1.0.0.beta1
Hardware: All All
: medium major
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.3.0 target:5.2.0.1 target:5.1.5
Keywords: haveBacktrace, regression
Depends on:
Blocks: Address-Source
  Show dependency treegraph
 
Reported: 2015-12-04 19:36 UTC by ribotb
Modified: 2017-12-06 20:45 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
windlg report for bug 96251 (20.83 KB, text/plain)
2015-12-06 11:03 UTC, ribotb
Details

Note You need to log in before you can comment on or make changes to this bug.
Description ribotb 2015-12-04 19:36:01 UTC
Hi,

When creation the address database with Address data source wizard, LO suddenly crashes.

File> Wizards > Address Data Source
step 1: Type: Thunderbird
step 2: Table selection: AddressBook
step 3: Title of Source:
Embed this definition in the current document: checked
Make this address book available to all modules: checked

Finish >>>  Crash (the window "Recovery a document" is displayed and we can only click OK)

step 3: With 'Embed this definition in the current document': unchecked (to create a new database)>>> Crash also.

Also note: I have in Thunderbird
- 3 address books
- 9 lists
The wizard, in step 2, shows only two address books and two lists. 

Bernard
Comment 1 Julien Nabet 2015-12-04 20:51:42 UTC
On pc Debian x86-64 with master sources updated today, I don't reproduce this.
Comment 3 ribotb 2015-12-06 11:03:48 UTC
Created attachment 121072 [details]
windlg report for bug 96251

Hi Beluga,

In attachment the windlg report.

Bernard
Comment 4 Jean-Baptiste Faure 2015-12-17 05:45:22 UTC
Reproducible with Version: 5.1.0.1.0+
Build ID: b676e97dd30272171dc07c8e5ddc3e562f5ebb1a
Threads 4; Ver: Linux 4.2; Render: default; 
built at home under Ubuntu_15.10_x86-64
Locale : fr-FR (fr_FR.UTF-8)

Best regards. JBF
Comment 5 raal 2015-12-17 16:24:33 UTC
No crash with 5.0.2.2, linux -> regression
Comment 6 Caolán McNamara 2016-06-02 13:07:38 UTC
can't reproduce under Linux 64bit. Is it still reproducible under Linux for anyone ?
Comment 7 Jean-Baptiste Faure 2016-06-16 20:33:28 UTC
Still reproducible for me with Version: 5.2.0.0.beta2+
Build ID: 1c0d1199fe02666de0d162f071ce7e6e812a23df
built at home under Ubuntu_16.04_x86-64
only in the case where I launch the wizard from the startCenter that is without any document open.
If I open a new text document first, there is no crash for me.

Idem with Version: 5.1.5.0.0+
Build ID: f7ad46993279d1da56980fc100b3961e5e349400

Best regards. JBF
Comment 8 Commit Notification 2016-06-17 08:17:42 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d6665da4eae15cf21eecaf048d1c9eb7381b3b99

Resolves: tdf#96251 address wizard crash when run from start center

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2016-06-17 08:19:07 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1cf6c67f629dd21a0fbcd223ef0dcdfabd4b6a9f&h=libreoffice-5-2

Resolves: tdf#96251 address wizard crash when run from start center

It will be available in 5.2.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Caolán McNamara 2016-06-17 08:20:57 UTC
aha, yes, that's the crucial bit. It has to be the start center which has no SfxObjectShell associated with it. https://gerrit.libreoffice.org/#/c/26408/ for 5-1
Comment 11 Jean-Baptiste Faure 2016-06-17 10:18:25 UTC
Verified fixed in Version: 5.2.0.0.beta2+
Build ID: c739cc104844893955dc9a4de2bf8050759703f2
built at home under Ubuntu 16.04 x86-64.

Best regards. JBF
Comment 12 Commit Notification 2016-06-22 14:55:50 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=290b922ed9e0c1a4f674d656f37c97ad18258797&h=libreoffice-5-1

Resolves: tdf#96251 address wizard crash when run from start center

It will be available in 5.1.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.