Resolves: tdf#96251 address wizard crash when run from start center

Change-Id: I20de1fbdd3ca609a1818dfe8f81ba66b1cb15281
(cherry picked from commit d6665da4eae15cf21eecaf048d1c9eb7381b3b99)
(cherry picked from commit 1cf6c67f629dd21a0fbcd223ef0dcdfabd4b6a9f)